--- a/9+Synthetic+Aperture+Radar+(SAR)+data.qmd
+++ b/9+Synthetic+Aperture+Radar+(SAR)+data.qmd
@@ -4,19 +4,49 @@ title: "Synthetic Aperture Radar (SAR) data"
 #editor: visual
 ---
 
-[🛡Lecture link](https://andrewmaclachlan.github.io/CASA0023-lecture-9/#1)<br/> 
-⚔️Practical link (No practical this week)<br/>
-
+[🛡Lecture link](https://andrewmaclachlan.github.io/CASA0023-lecture-9/#1)<br/> ⚔️Practical link (No practical this week)<br/>
 
 <img src="https://raw.githubusercontent.com/Murphy829/RSETEST/cfad0da659f496bf719127057fe096a910dbfa5b/imgs/mindmaps/9%2BSynthetic%2BAperture%2BRadar%2B(SAR)%2Bdata.svg" width="700"/><br/> A mindmap for this chapter, marking orange is the part that works best for me.
 
 ## Summary
 
-This week
+This week introduces the principles of SAR and its data processing. 
+
+SAR (Synthetic Aperture Radar) satellite is a kind of active earth observation satellite, which can achieve round-the-clock, all-weather observation of the earth, and has certain surface penetration capability. Therefore, SAR satellites have unique advantages in disaster monitoring, environmental monitoring, ocean monitoring, resource surveying, crop estimation, mapping and military applications, and can play a role that is difficult to play by other remote sensing means, and are therefore receiving increasing attention from countries around the world.
+
+<img src="http://www.microsate.com/xw/gzdt/202011/W020201127565047800525.jpg"/ width=300><br/>
+(The first SAR satellite - Seasat-A: born on 27 June 1978, developed by NASA, the US National Space Agency. Source: NASA)
+
+*Useful resources: a comprehensive and systematic introduction to SAR.
+```{=html}
+<iframe width="700" height="400" src="https://medium.com/the-downlinq/sar-101-an-introduction-to-synthetic-aperture-radar-2f0b6246c4a0" title="SAR 101: An Introduction to Synthetic Aperture Radar"></iframe>
+```
+
+### Advantage
+
+- All-day data acquisition capability, imaging is not limited by light and can work day or night with no sunlight exposure requirements.
+- All-weather capability, RF radiation is not significantly affected by clouds, precipitation or other atmospheric conditions, so it is not limited by weather or clouds and can operate in all weather conditions.
+- The resolution of the image is independent of flight altitude and the choice of satellite orbits is more abundant.
+- It can penetrate vegetation and soil more deeply than in the visible and infrared. The penetration capability depends on the microwave wavelength and  offers the possibility of inversion of surface vegetation as well as soil properties.
+- Data can be collected at different wavelengths and polarisations to obtain different types of information, for example about surface structure and  moisture content.
+- Information can be collected over a large area at a low resolution, or over a smaller area with detailed high resolution images.
+
+### Disvantage
+
+- Due to the side-view coherent imaging method, image noise pollution is more serious.
+- The system design is complex and the amount of data processed is large, making it difficult to obtain effective feature information.
+- Compared with optical remote sensing images, SAR data has low spatial resolution and poor visual effect.
+- Compared with optical remote sensing images, SAR imaging technology is more cumbersome, and data post-processing is slightly more difficult. 
+- The training period for technicians is long and the threshold for practice is high, requiring adequate basic knowledge of physics.
+- In the field of interferometric deformation recognition applications, mountainous areas are not well deconfined due to large deformation gradients.
+
 
 ## Application
 
-XXX
+Timeline of past, present and future SAR missions between 1991 and 2025, and their main features (ESA, 2021; Flores-Anderson et al., 2019). Symbols are coloured according to the wavelength band of the sensor. The resolution corresponds to the maximum spatial resolution that the sensor can achieve, and is expressed in metres. For the revisit time, the number in the brackets indicates the minimum revisit time achievable with the constellation.
+<img src ="https://www.researchgate.net/profile/Giorgia-Giardina/publication/356791826/figure/fig2/AS:1098557885026304@1638928018426/Timeline-of-past-present-and-future-SAR-missions-between-1991-and-2025-and-their-main.png"/ width=700><br/>
+(Source: [Macchiarulo et al., 2022](https://www.researchgate.net/publication/356791826_Multi-Temporal_InSAR_for_transport_infrastructure_monitoring_Recent_trends_and_challenges))
+
 
 ## Reflection
 
