--- a/9+Synthetic+Aperture+Radar+(SAR)+data.qmd
+++ b/9+Synthetic+Aperture+Radar+(SAR)+data.qmd
@@ -14,7 +14,7 @@ This week introduces the principles of SAR and its data processing.
 
 SAR (Synthetic Aperture Radar) satellite is a kind of active earth observation satellite, which can achieve round-the-clock, all-weather observation of the earth, and has certain surface penetration capability. Therefore, SAR satellites have unique advantages in disaster monitoring, environmental monitoring, ocean monitoring, resource surveying, crop estimation, mapping and military applications, and can play a role that is difficult to play by other remote sensing means, and are therefore receiving increasing attention from countries around the world.
 
-<img src="http://www.microsate.com/xw/gzdt/202011/W020201127565047800525.jpg"/ width=300><br/>
+<img src="https://github.com/Murphy829/RSETEST/blob/main/imgs/SAR.jpg?raw=true"/ width=300><br/>
 (The first SAR satellite - Seasat-A: born on 27 June 1978, developed by NASA, the US National Space Agency. Source: NASA)
 
 *Useful resources: a comprehensive and systematic introduction to SAR.
