--- a/9+Synthetic+Aperture+Radar+(SAR)+data.qmd
+++ b/9+Synthetic+Aperture+Radar+(SAR)+data.qmd
@@ -21,8 +21,10 @@ SAR (Synthetic Aperture Radar) satellite is a kind of active earth observation s
 
 
 ```{=html}
-<iframe width="700" height="400" src="https://github.com/Murphy829/RSETEST/blob/26442c3657af39a64ebbc4f9290347e5f46d6713/imgs/SAR101.pdf"></iframe>
+<iframe width="700" height="400" src="https://medium.com/the-downlinq/sar-101-an-introduction-to-synthetic-aperture-radar-2f0b6246c4a0"></iframe>
 ```
+*If the page is not embedded successfully, please click on ([Daniel, 2020](https://medium.com/the-downlinq/sar-101-an-introduction-to-synthetic-aperture-radar-2f0b6246c4a0)) to view it.
+
 ### Advantage
 
 -   All-day data acquisition capability, imaging is not limited by light and can work day or night with no sunlight exposure requirements.
