--- a/8+Temperature+and+policy.qmd
+++ b/8+Temperature+and+policy.qmd
@@ -10,12 +10,151 @@ title: "Temperature and policy"
 
 ## Summary
 
-This week
+This week most of the policies on sustainable development are presented using the heat island effect as an example. In the practical section Landsat and MODIS data are used as examples to view temperature changes in specific regions.
 
+### Basics
+
+- What is (Urban Heat Island) UHI?
+
+Structures such as buildings, roads, and other infrastructure absorb and re-emit the sun’s heat more than natural landscapes such as forests and water bodies. Urban areas, where these structures are highly concentrated and greenery is limited, become “islands” of higher temperatures relative to outlying areas. These pockets of heat are referred to as “heat islands.” Heat islands can form under a variety of conditions, including during the day or night, in small or large cities, in suburban areas, in northern or southern climates, and in any season.(Source: [USA.EPA, 2022](https://www.epa.gov/heatislands/learn-about-heat-islands))
+
+<img src="https://www.epa.gov/sites/default/files/2020-07/heat_island_effect_diagram.jpg"/ width=700><br/>
+(Heat Island Effect Diagram, Source: [USA.EPA, 2022](https://www.epa.gov/heatislands/learn-about-heat-islands))
+
+
+- The urban heat impacts
+  - Social impacts
+    - Public Health: Public health is the most commonly referred to impact of extreme heat, and for good reason. Extreme heat is the deadliest U.S. weather-related risk ([Hondula et al. 2015](https://www.sciencedirect.com/science/article/pii/S0013935115000687?via%3Dihub)) and accounts for a larger portion of the public health burden than most other natural disasters combined ([Berko et al. 2014](https://pubmed.ncbi.nlm.nih.gov/25073563/)). 
+    - Education: While outdoor educational activities can be temporarily halted during extreme heat events, learning outcomes are also disrupted by extreme heat. A study of educational achievement data in 12,000 U.S. school districts and 58 counties found that the rate of learning decreased with the increase in hot school days ([Park, Behrer, and Goodman 2021](https://www.nature.com/articles/s41562-020-00959-9))
+      
+  - Environmental impacts
+    - Fossil fuel + pollution
+    - Each degree of ambient temperature rise the increase in peak electricity load has been estimated between 0.45 and 4.6%, corresponding to around 21 W per degree rise per person ( [Santamouris et al. 2015](https://www.sciencedirect.com/science/article/pii/S0378778814007907))
+    - Landscapes: Urban landscapes require substantial investment with their planning, installation, and maintenance over their lifetimes. Increasing temperatures can limit the richness and diversity of urban vegetation ([Brans et al. 2018](https://www.sciencedirect.com/science/article/pii/S0169204618300884?via%3Dihub)) as well as negatively impact the 
+growth of urban trees ([Nitschke et al. 2017](https://www.sciencedirect.com/science/article/pii/S0169204617301500?via%3Dihub))
+      
+  - Economic impacts
+      - Local:Melbourne first assessment 300 million (AUD) of which health 282(AUD)([AECOM,2012](https://www.melbourne.vic.gov.au/sitecollectiondocuments/eco-assessment-of-urban-heat-island-effect.pdf)).
+      - GDP: Under low Green House Gas scenario,percent GDP lost from UHI was 0.71% (in 2050) and 1.04% (in 2100).
+Under very high Green House Gas scenario, percent GDP lost from UHI was 0.80% (in 2050) and 1.79% (in 2100)([Estrada et al. 2017](https://www.nature.com/articles/nclimate3301.pdf))
+
+  - Infrastructure Impacts
+      - Water: Water use increases with rising temperatures, particularly as landscapes need more watering during hot temperatures
+      - Energy: Energy use and the energy grid system are also closely connected with increasing temperatures. 
+      - Transportation:  Extreme heat also affects transportation infrastructure. Alternative transportation modes are particularly at risk if they are not designed with heat in mind.
+      
+      
+- Related Global policies or plans
+
+  - [United Nations New Urban Agenda (2016)](https://habitat3.org/the-new-urban-agenda/)
+  
+  "Achieving the benefits of connectivity and reducing the financial, environmental and public health costs of inefficient mobility, congestion, air pollution, urban heat island effects and noise."
+  
+  - [Universal Sustainable Development Goals (2015)](https://www.undp.org/sustainable-development-goals#:~:text=The%20Sustainable%20Development%20Goals%20(SDGs)%2C%20also%20known%20as%20the,people%20enjoy%20peace%20and%20prosperity.)
+    
+    "Goal 11: Make cities and human settlements inclusive, safe, resilient and sustainable."
+    
+  - [Beating the Heat: A Sustainable Cooling Handbook for Cities](https://www.unep.org/resources/report/beating-heat-sustainable-cooling-handbook-cities)
+  
+  If is the first full guide on UHI that suggests: Baseline assessment; Key factors to consider(p. 60) such as albedo, urban form, city zoning, green cover, heat maps (that mention satellite data) - Chapter 5. First major document that calls for specific integration into policy.
+  
+  - [Heatwave Guide for Cities (2019)](https://ghhin.org/resources/heatwave-guide-for-cities/)
+  
+  This practical guide is designed with, and for, people working in city government to understand, reduce the risk of, and respond to, heatwaves in their cities.
+
+
+
+- Related Local policies or plans
+
+  - Superblocks :The idea has been proposed many times - dating back to Barcelona’s Plan Macià, 1932, and Josep Lluís Sert and Le Corbusier.
+  
+  - Medellín Green Corridors :2016-2019 Government Plan = Medellín, Environmental Urbanism. Restore green corridors.
+  
+  - Sydney's western suburbs :Assessment of the current state of urban heat in Western Sydney today;The future of urban heat in Western Sydney, highlighting the increasing severity and frequency of heat waves; impacts of urban heat on people, infrastructure, the economy and the environment; ans taking stock of the existing work across Western Sydney to address heat.
+  
+  - Seattle’s Green Factor
+  - Baton Rouge’s landscape ordinance
+  - Fremantle’s Urban Forest: 20% canopy coverage (2020) – AUD 2.57million
+  - Fremantle's Urban Forest Plan
+
+- Related Metropolitan (city) policy / temperature reduction activities
+
+  - Perth and Peel 3.5 million
+  - The London Plan
+  - Singapore’s Master Plan
+  
+  
 ## Application
 
-XXX
+A summary and discussion of how NYC is coping with the urban heat island effect, using New York City as an example.
+
+### [OneNYC 2050 Volume 7 (2019)](https://onenyc.cityofnewyork.us/strategies/a-livable-climate/)
+
+<img src ="https://scontent-lhr8-1.xx.fbcdn.net/v/t1.6435-9/84983571_3532307730143843_3421298474715447296_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=2c4854&_nc_ohc=NrWTv13Oit4AX8ZQ3g2&_nc_ht=scontent-lhr8-1.xx&oh=00_AfArENwZo8OgEBrOGT7m99aNa6ZRiGE6ux5hzMJdZJ0yJA&oe=644331C4"/ width=300><br/>
+
+INITIATIVE 21: New York City is making changes to its physical environment to promote resiliency ...... Such as wetland and forest restoration, to stabilize shorelines, reduce erosion, act as carbon sinks, and mitigate urban heat island effects.
+
+### [Securing Our Future: Strategies for New York City in the Fight Against Climate Change (2020)](https://council.nyc.gov/data/securing-our-future/)
+
+Goal: Achieve cooling equity and reduce heat-related deaths.
+Key strategy: Increase cooling assistance for vulnerable populations.
+
+<img src="https://nylcv.org/wp-content/uploads/Securing-our-Future_Report-2020.png"/ width=300><br/>
+
+
+### [COOL NEIGHBORHOODS NYC - A COMPREHENSIVE APPROACH TO KEEP COMMUNITIES SAFE IN EXTREME HEAT (2017)](https://www.preventionweb.net/publication/cool-neighborhoods-nyc-comprehensive-approach-keep-communities-safe-extreme-heat)
+
+Cool Neighborhoods NYC Monitoring Strategies: Collecting Innovative Data to Deliver Inclusive and Health-focused Climate Policy.
+
+<img src ="https://www.preventionweb.net/sites/default/files/styles/por/public/53935_largeImage.jpg?itok=zFR6tUSc"/ width=300><br/>
+
+
+### [Planning for Urban Heat Resilience (2022)](https://ghhin.org/resources/planning-for-urban-heat-resilience/)
+
+Heat disproportionately affects marginalized residents and those who face systematic inequities such as workplace safety, housing quality, energy affordability, transportation reliability, and healthcare access. But planning can shape heat risk. Planners will be key practitioners in helping their communities achieve greater heat resiliency by proactively managing and mitigating heat across the many systems and sectors it affects.
+
+PAS Report 600 provides holistic guidance to help practitioners increase urban heat resilience equitably in the communities they serve. It provides an in-depth overview of the contributors to urban heat and equity implications, and it lays out an urban heat resilience framework and collection of strategies to help planners mitigate and manage heat across a variety of plans, policies, and actions.
+
+<img src ="https://ghhin.org/wp-content/uploads/Screen-Shot-2022-05-07-at-9.52.54-PM.png"/ width=300><br/>
+
+
+### [Heat Island Compendium (2008)](https://www.epa.gov/heatislands/heat-island-compendium)
+
+Describes key urban heat island reduction strategies in depth in Chapter 2-4: Trees and Vegetation, Green Roofs, Cool Roofs, Cool Pavements.
+
+<img src ="https://www.lifetreecheck.eu/getattachment/01148420-c2be-433e-b61e-e8002fd4d4bd/Reducing-Urban-Heat-Islands-Compendium-of-Strategi?width=910"/ width=300><br/>
+
+### [Heat & Health Tracker](https://ephtracking.cdc.gov/Applications/heatTracker/)
+
+Extreme heat events have long threatened public health in the United States. The CDC Heat & Health Tracker provides local heat and health information so communities can better prepare for and respond to extreme heat events. Use the search on the right to explore how extreme heat affects your county, populations who are at risk, and response resources.
+
+```{=html}
+<iframe width="700" height="500" src="https://ephtracking.cdc.gov/Applications/heatTracker/" title="Heat & Health Tracker"></iframe>
+```
+
+
+### Recognizing hot area and which populations are disproportionately exposed to heat risk
+
+- Overview
+
+The scope of the project is to improve urban resilience to climate extremes by mapping heat risk as a function of local climate variability, urban form and fabric, and demographic and social data that reflect socio-economic sensitivity at the neighbourhood scale.
+
+- Workflow
+
+  - Step 1:  For this be accomplished, analysis of satellite data of high spatial resolution will provide maps of the surface urban heat island which along with ground data on air temperature will support the extraction of hot spot areas in the urban web.
+
+  - Step 2: At a second stage, cluster analysis, with the use of Machine Learning (through the Google Earth Engine), will be performed to define which areas and which populations are disproportionately exposed to heat risk (“extreme heat injustice”), especially in the event of heat waves. Cluster analysis will take note of a selection of parameters, among others on temperature, building type and density, type and density of population, % of greenery, proximity to green areas, income, etc.
+
+  - Step 3: Landscape mapping will indicate locations where changes in the urban environment can mitigate heat risk and heat injustice: for instance, areas where impervious materials predominate could be landscaped with trees, pocket parks, and water features; areas where buildings are old and more sensitive to heat may be provided with subsidies for energy retrofitting; and buildings could develop green roofs or use cool material. In this way, cities improve their resilience to climate extremes.
+
+- Datasets
+  - Satellite images from Landsat, Aqua and Terra, Sentinel 2 and 3 (public and free)
+  - Ground data on temperature (city data bases, ERA-5)
+  - Census data on economy, housing, demographic dynamics, etc.
+
 
 ## Reflection
 
-XXX
+Thanks to GEE, EO data such as landsat, MODIS, etc. are easily accessible and processed, and combined with socio-economic data, enable quantitative research on urban governance issues.
+
+Over the years, as the call to address the climate crisis has grown, data-driven approaches have become increasingly important and have influenced the decisions of government leaders in pioneering cities such as New York and London. But we also need to look at the urban governance issues facing developing countries. In China, data-driven urban governance is limited to a few key cities due to budgetary and technological development constraints.
